--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -32,6 +32,9 @@ jobs:
         run: |
           echo '{ "applinks": { "apps": [], "details": [ { "appID": "TEAM_ID.com.example.myapp", "paths": ["*"] } ] } }' > build/web/.well-known/apple-app-site-association
 
+      - name: Create _redirects file
+        run: echo '/*    /index.html   200' > build/web/_redirects
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
