--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -31,9 +31,11 @@ jobs:
       - name: Create Apple file
         run: |
           echo '{ "applinks": { "apps": [], "details": [ { "appID": "Q5H6LPUXU5.org.vumc.mycapplusbeta", "paths": ["*"] } ] } }' > build/web/.well-known/apple-app-site-association
-#
-#      - name: Create _redirects file
-#        run: echo '/*    /index.html   200' > build/web/_redirects
+
+      - name: Create _headers file
+        run: |
+          echo '/.well-known/apple-app-site-association' > build/web/_headers
+          echo '  Content-Type: application/json' >> build/web/_headers
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
