--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,3 +30,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/apple.png
+    - assets/google.png
