--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,13 @@ environment:
 
 dependencies:
 
+  auto_size_text: ^3.0.0
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
+  gap: ^3.0.1
   get: ^4.7.2
   get_it: ^8.0.3
   universal_html: ^2.2.4
